# block-data-store

./: .env.example  .gitignore  AGENTS.md  GETTING_STARTED.md  README.md  pyproject.toml  pytest.ini  requirements.azure_di.txt  requirements.dataset.txt  requirements.txt  telemetry.json
apps/: nicegui_demo.py
apps/demo/: __init__.py  layout.py  main.py  state.py
block_data_store/: __init__.py  startup.py
block_data_store.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
block_data_store/db/: engine.py  schema.py
block_data_store/models/: block.py  relationship.py
data/: control_register.md  poc_long_showcase.md  policy_overview.md  sample_dataset.csv  secondary_tree_example.json
docs/: GETTING_STARTED.md  azure_di_parser_design.md  block_model_updates.md  block_repository_optimisation.md  block_soft_deletion_approach_revised.md  decipher_block_grouping_model.md  decipher_block_specification.md  decipher_full_specification.md  decipher_poc_specification.md  decipher_relationships_specification.md  decipher_renderer_architecture.md  decipher_storage_layers_summary.md  future_considerations.md  perf_smoke.md  poc_wip.md
notebooks/: poc_walkthrough.ipynb  test.ipynb
scripts/: demo_ingest.py  di_probe.py  load_secondary_tree_example.py  perf_smoke.py  perf_smoke_batch.py
tests/: __init__.py  conftest.py  test_atomic_parent_updates.py  test_block_repository.py  test_document_store.py  test_engine.py  test_markdown_parser.py  test_markdown_renderer.py  test_parser_azure_di.py  test_parser_dataset.py  test_relationships.py  test_round_trip.py
(+48 files in other folders)
